# boilerplate_flask_sqlalchemy

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  Pipfile  Procfile  README.rst  app.py  config.py  docker-compose.yml  main.py  nginx.conf  setup.cfg  setup.py  swagger.yml
.circleci/: config.yml  setup-heroku.sh
app/: __init__.py  commands.py  config.py  db.py  logger.py
app/models/: __init__.py  product.py
app/routes/: __init__.py  product.py
docs/: .gitignore  collect_and_build.sh  conf.py  index.rst
hooks/: pre-commit  pre-push
tests/: __init__.py  conftest.py  context.py
tests/routes/: test_product.py
