[metadata]
name = boilerplate_flask_sqlalchemy
version = 0.0.1
author = achooan
author_email = 88soldieron@gmail.com
description = a simple boilerplate app based on flask and sqlalchemy
long_description = file: README.rst
long_description_content_type = text/x-rst
license = file: LICENSE.txt
keywords = sample flask sqlalchemy restful
project_urls =
    Source = https://github.com/achooan/boilerplate_flask_sqlalchemy
    Bug Reports = https://github.com/achooan/boilerplate_flask_sqlalchemy/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Flask
    Intended Audience :: Developers


[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    click==7.0
    connexion==2.2.0
    flask-marshmallow==0.9.0
    flask-sqlalchemy==2.3.2
    flask==1.0.2
    gunicorn==19.9.0
    marshmallow-sqlalchemy==0.15.0
    python-dotenv==0.10.1
    swagger-ui-bundle==0.0.2

[options.extras_require]
dev = 
    flake8==3.6.0
test = 
    pytest==4.1.1

[options.packages.find]
exclude =
    contrib
    docs
    tests

